# DeepExplor-OS

./: .gitignore  README.md  VERSIONS.md
commons/: __init__.py  analyser_broker.py  aoi.py  auth.py  base_downloader.py  clone-all.sh  datacolle_broker.py  delivery.py  deposits_broker.py  download.py  drill_broker.py  exploration_broker.py  geochem_broker.py  geochem_public_broker.py  geophys_broker.py  insar_broker.py  insar_fusion_broker.py  insar_schema.json  insar_utils.py  internal_auth.py  model3d_broker.py  network.py  slowvars_broker.py  spectral_indices.py  structural_broker.py  structural_schema.json
data-colle/: 优化方案.md
geo-7slow/: .gitignore  (+2 more)
geo-Yaky/fspef-vers-system/backend/: pyproject.toml
geo-Yaky/fspef-vers-system/backend/app/: config.py  main.py
geo-Yaky/fspef-vers-system/backend/app/api/endpoints/: jobs.py  results.py  spectral_library.py  uploads.py
geo-Yaky/fspef-vers-system/backend/app/core/: alteration_indices.py  data_parser.py  deep_channel.py  depth_estimator.py  kriging.py  mesh_generator.py  satellite_frt.py  signal_processing.py  spectral_library.py
geo-Yaky/fspef-vers-system/backend/app/db/: seed.py  session.py
geo-Yaky/fspef-vers-system/backend/app/models/: substance.py
geo-Yaky/fspef-vers-system/backend/app/pipeline/: orchestrator.py  stage1_preprocessing.py  stage2_frequency_transform.py  stage3_feature_extraction.py  stage4_spectral_matching.py  stage5_material_identification.py  stage6_depth_calculation.py  stage7_anomaly_segmentation.py  stage8_3d_modeling.py
geo-Yaky/fspef-vers-system/backend/app/schemas/: schemas.py
(+536 files in other folders)
