[project]
name = "fspef-vers-system"
version = "1.0.0"
description = "Yakymchuk Frequency Resonance Direct Exploration Analysis System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "PyWavelets>=1.5",
    "scikit-image>=0.22",
    "pykrige>=1.7",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
